--- a/front/app/src/main/res/layout/fragment_login.xml
+++ b/front/app/src/main/res/layout/fragment_login.xml
@@ -8,36 +8,55 @@
         android:id="@+id/editTextLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Login"
-        android:visibility="gone" />
+        android:hint="Логин"
+        android:visibility="gone"
+        android:layout_gravity="center_horizontal" />
 
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Пароль"
         android:inputType="textPassword"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_gravity="center_horizontal" />
 
     <Button
         android:id="@+id/buttonLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:visibility="gone" />
+        android:text="Вход"
+        android:visibility="gone"
+        android:layout_gravity="center_horizontal" />
 
     <Button
-        android:id="@+id/buttonLogout"
-        android:layout_width="wrap_content"
+        android:id="@+id/buttonRegister"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Logout"
-        android:visibility="gone"/>
+        android:text="Регистрация"
+        android:visibility="gone"
+        android:layout_gravity="center_horizontal" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/buttonLogout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Выход"
+            android:layout_weight="1" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textViewResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Result will be shown here"
+        android:text="Здесь будет отображен результат"
         android:textSize="16sp"
         android:paddingTop="16dp" />
 </LinearLayout>
