--- a/front/app/src/main/res/layout/fragment_feed.xml
+++ b/front/app/src/main/res/layout/fragment_feed.xml
@@ -1,9 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
+
+    <EditText
+        android:id="@+id/editTextSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Введите заголовок для поиска"
+        android:padding="8dp"/>
 
     <TextView
         android:id="@+id/textViewLoginRequired"
